# emulator-bug-study

./: .gitignore  README.md  flake.nix  pyproject.toml  pyrightconfig.json
data/configs/: angr.toml  box64.toml  qemu-mode.toml  qemu-user-mode.toml  qemu.toml
data/prompts/: accelerator.txt  angr.txt  box64.txt  classify.txt  mode.txt  user-mode.txt
github/: downloader.py  flake.nix  pyproject.toml
lib/: pyproject.toml
lib/buglib/: __init__.py  checkpoint.py  errors.py  files.py  github.py  gitlab.py  jsonl.py  pagination.py
studies/: angr.sh  box64.sh  qemu.sh
tests/: test_analyze.py  test_backends.py  test_buglib.py  test_classifier.py  test_config.py  test_jsonl.py  test_scrape_git.py  test_scrape_github.py  test_scrape_gitlab.py  test_scrape_mailinglist.py
tools/analyze-csv/: pyproject.toml
tools/analyze-csv/analyze_csv/: main.py
tools/analyze-diff/: pyproject.toml
tools/analyze-diff/analyze_diff/: main.py
tools/analyze-results/: pyproject.toml
tools/analyze-results/analyze_results/: main.py
tools/bug-classifier/: pyproject.toml
tools/bug-classifier/bug_classifier/: backend.py  config.py  main.py
tools/scrape/: pyproject.toml
tools/scrape-git/: pyproject.toml
tools/scrape-git/scrape_git/: github.py  main.py
tools/scrape-github/: pyproject.toml
tools/scrape-github/scrape_github/: main.py  output.py
tools/scrape-gitlab/: pyproject.toml
tools/scrape-gitlab/scrape_gitlab/: description_parser.py  main.py  output.py
tools/scrape-mailinglist/: pyproject.toml
tools/scrape-mailinglist/scrape_mailinglist/: launchpad.py  main.py  thread.py
tools/scrape/scrape/: description_parser.py  github.py  gitlab.py  launchpad.py  mailinglist.py  main.py  thread.py
tools/word-count/: pyproject.toml
tools/word-count/word_count/: main.py
