[project]
name = "github-downloader"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[project.scripts]
downloader = "downloader:main"

[tool.hatch.build.targets.wheel]
only-include = ["downloader.py", "output.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
