[project]
name = "analyze-results"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
analyze-results = "analyze_results.main:main"

[tool.hatch.build.targets.wheel]
packages = ["analyze_results"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
