[project]
name = "scrape-git"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "buglib",
    "requests",
    "tomlkit",
]

[project.scripts]
scrape-git = "scrape_git.main:main"

[tool.uv.sources]
buglib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["scrape_git"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
