[project]
name = "scrape-mailinglist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "buglib",
    "requests",
    "beautifulsoup4",
    "html5lib",
]

[project.scripts]
scrape-mailinglist = "scrape_mailinglist.main:main"

[tool.uv.sources]
buglib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["scrape_mailinglist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
