[project]
name = "scrape"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "buglib",
    "requests",
    "tomlkit",
    "beautifulsoup4",
    "html5lib",
]

[project.scripts]
scrape = "scrape.main:main"

[tool.uv.sources]
buglib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["scrape"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
