[project]
name = "word-count"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "buglib",
]

[project.scripts]
word-count = "word_count.main:main"

[tool.uv.sources]
buglib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["word_count"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
